THRIFT-1552 Thrift (cpp) include files shouldn't require adding "thrift" to the compilers include path.

roger: some additional fixes

git-svn-id: https://svn.apache.org/repos/asf/thrift/trunk@1325677 13f79535-47bb-0310-9956-ffa450edef68