lib/cpp/src/thrift/async/TAsyncProcessor.h
@@ -23,7 +23,7 @@
 #include <tr1/functional>
 #include <boost/shared_ptr.hpp>
 #include <thrift/protocol/TProtocol.h>
-#include <TProcessor.h>
+#include <thrift/TProcessor.h>
 
 namespace apache { namespace thrift { namespace async {
 
